# filter-spotify-playlists

./: README.md  pyproject.toml
filter_spotify_playlists/: main.py
filter_spotify_playlists/tests/: filter_spotify_playlists.postman_collection.json
